Auth login workflow complete, signup next

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,32 @@
   --color: black;
 }
 
+@-webkit-keyframes spinner-border {
+  to {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes spinner-border {
+  to {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+.spinner {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  vertical-align: text-bottom;
+  border: 3px solid grey;
+  border-right-color: transparent;
+  border-radius: 50%;
+  -webkit-animation: spinner-border .75s linear infinite;
+  animation: spinner-border .75s linear infinite;
+}
+
 body {
   font-family: sans-serif, "Helvetica";
   color: black;
@@ -135,6 +161,13 @@ body {
   margin-bottom: 4px;
 }
 
+.auth-form-description {
+  font-size: 0.8rem;
+  height: 1rem;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
 
 .auth-form-error {
   color: red;
