Created function for choosing avatar default or custom upload

--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,7 @@ body {
 textarea {
   font-family: sans-serif, "Helvetica";
   color: var(--text-color);
+  background-color: var(--background-color);
 }
 
 textarea:focus {
