--- a/src/App.css
+++ b/src/App.css
@@ -510,6 +510,24 @@ textarea:focus {
   border-radius: 5px;
 }
 
+.search-input {
+  background-color: var(--background-color);
+  color: var(--text-color);
+  padding: 8px;
+  border: 1px white grey;
+  border-radius: 8px;
+  height: 16px;
+}
+
+.search-button {
+  background-color: var(--background-color);
+  color: var(--text-color);
+  border: solid 1px grey;
+  border-radius: 100px;
+  margin: 0.2rem 0;
+  padding: 0.5rem 1rem;
+}
+
 @media screen and (max-width: 700px) {
   .app-full-page {
     justify-content: center;
