--- a/src/App.css
+++ b/src/App.css
@@ -528,6 +528,29 @@ textarea:focus {
   padding: 0.5rem 1rem;
 }
 
+.friends-component-button {
+  background-color: var(--background-color);
+  color: var(--text-color);
+  padding: 0.6rem 1rem;
+  box-sizing: border-box;
+  border: solid grey 1px;
+  border-radius: 8px;
+  margin: 0 auto;
+  font-size: large;
+  height: 44px;
+}
+
+.friends-button-contianer {
+  display: flex;
+  flex-direction: row;
+  margin: 1rem 0;
+}
+
+.friends-component-button-selected {
+  box-shadow: inset 0px 0px 0px 1px var(--text-color);
+  /*border: solid 2px var(--text-color);*/
+}
+
 @media screen and (max-width: 700px) {
   .app-full-page {
     justify-content: center;
