--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,28 @@
   }
 }
 
+.content-type {
+  background-color: var(--background-color);
+  color: var(--text-color);
+  width: 100%;
+  padding: 6px;
+  border: 1px solid var(--accent-color);
+  border-radius: 6px;
+  margin-bottom: 4px;
+}
+
+.input-image-placeholder {
+  min-height: 100px;
+  height: auto;
+  display: flex;
+  justify-content: center;
+}
+
+.input-image-placeholder > * {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
 .spinner {
   display: inline-block;
   width: 10px;
@@ -208,6 +230,7 @@ textarea:focus {
   border-radius: 0.5rem;
   margin-bottom: 2rem;
   max-width: 28rem;
+  height: fit-content;
 }
 
 .create-post-title {
@@ -221,10 +244,12 @@ textarea:focus {
   display: flex;
   flex-direction: column;
   margin: 1rem;
+  height: fit-content;
 }
 
 .create-post-textarea-element {
   background-color: var(--background-color);
+  width: 100%;
   border: none;
   height: 6rem;
   resize: none;
